# artificial_intelligence_services

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configurations/: constants.py
configurations/ol_configurations/: configurations.py  nf_ollama_configurations.py  nf_open_ai_configurations.py  ollama_configurations.py
ol_ai_services/chunking/: chunk_analyser.py  chunked_texts_getter.py
ol_ai_services/common_utilities/: file_manager.py
ol_ai_services/data_export/: networkx_digraph_from_graph_documents_getter.py
ol_ai_services/embeddings/: search_embedded_documents.py
ol_ai_services/fine_tuning/: model_fine_tuner.py
ol_ai_services/llms/: chat_open_ai_session_getter.py  client_factory.py  langchain_model_getter.py  llm_clients.py  llm_generator.py  text_generators.py
ol_ai_services/model_management/: model_loader.py  model_types.py
ol_ai_services/release_management/: generate_poetry_requirements.py  generate_requirements.py
ol_ai_services/summarisation/: pdf_summariser.py
ol_ai_services/text_extraction/: data_gatherer.py  document_lexical_structure_extractor.py  document_parser.py  pdf_folder_extractor.py
ol_ai_services/tokenisation/: abstract_tokeniser.py  general_tokeniser.py  hugging_face_tokeniser.py  open_ai_tokeniser.py  tokeniser.py  tokeniser_factories.py  tokeniser_types.py
ol_ai_services/tools/: __init__.py  base_tool.py  (+2 more)
release_management/: generate_poetry_requirements.py  generate_requirements_from_usage.py  requirements_master.txt  requirements_master_full.txt
source/: requirements.txt
tests/: conftest.py
(+280 files in other folders)
